--- a/databruce/static/databruce/css/style.css
+++ b/databruce/static/databruce/css/style.css
@@ -88,6 +88,11 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     border-color: inherit !important;
+    max-width: 100% !important;
+}
+
+.card-body {
+    overflow-x: hidden !important;
 }
 
 .card {
@@ -115,7 +120,9 @@ td:not(.fc-day,[class$="opener"],[class$="closer"],.child),
     color: var(--base-content) !important;
     border-color: var(--border) !important;
 }
-
+.card {
+   break-inside: avoid;
+}
 .card-body:not(.success, .warning, .danger, .info) {
     background-color: var(--base-100) !important;
     color: var(--base-content) !important;
@@ -342,9 +349,9 @@ th .bi {
 }
 
 /* needed to center text on badge */
-.badge * {
+/* .badge * {
     vertical-align: middle !important;
-}
+} */
 
 .progress {
     height: 0.9rem !important;
@@ -393,9 +400,13 @@ ul.nav-pills>.nav-link:last-child {
     font-size: 1rem;
 }
 
+table tbody td,
+table tbody td > *{
+  vertical-align: middle;
+}
+
 td .badge {
     padding: 0.25rem 0.35rem !important;
-    vertical-align: middle !important;
 }
 
 .badge {
@@ -403,7 +414,7 @@ td .badge {
     font-size: 0.75rem !important;
 }
 
-.card-body,
+/* .card-body, */
 td:not(.fc-day) {
     overflow: clip !important;
 }
